fix: use specifics type for purpose and content type
