# cmd/docs/swagger.json
@@ -768,6 +768,19 @@
                 }
             }
         },
+        "ImageContentType": {
+            "type": "string",
+            "enum": [
+                "image/jpeg",
+                "image/png",
+                "image/webp"
+            ],
+            "x-enum-varnames": [
+                "ContentTypeJPEG",
+                "ContentTypePNG",
+                "ContentTypeWebP"
+            ]
+        },
         "InitUploadRequest": {
             "type": "object",
             "required": [
@@ -777,14 +790,14 @@
             ],
             "properties": {
                 "content_type": {
-                    "type": "string"
+                    "$ref": "#/definitions/ImageContentType"
                 },
                 "file_size": {
                     "type": "integer",
                     "minimum": 1
                 },
                 "purpose": {
-                    "type": "string"
+                    "$ref": "#/definitions/UploadPurpose"
                 }
             }
         },
@@ -1019,6 +1032,19 @@
                     "maxLength": 60
                 }
             }
+        },
+        "UploadPurpose": {
+            "type": "string",
+            "enum": [
+                "AVATAR",
+                "BANNER",
+                "POST_IMAGE"
+            ],
+            "x-enum-varnames": [
+                "PurposeAVATAR",
+                "PurposeBANNER",
+                "PurposePOSTIMAGE"
+            ]
         },
         "UploadStatus": {
             "type": "string",
